--- a/Terraria/tModLoaderconfig.json
+++ b/Terraria/tModLoaderconfig.json
@@ -17,7 +17,8 @@
         "Keywords": "size new world",
         "Description": "Set the Size of the World",
         "FieldName": "WorldSize",
-        "IncludeInCommandLine": false,
+        "ParamFieldName": "autocreate",
+        "IncludeInCommandLine": true,
         "InputType": "enum",
         "EnumValues": {
             "1": "1 - Small World",
@@ -35,9 +36,7 @@
         "InputType": "enum",
         "EnumValues": {
             "0": "Classic",
-            "1": "Expert",
-            "2": "Master (1.4+ only)",
-            "3": "Journey (1.4+ only)"
+            "1": "Expert"
         },
         "IncludeInCommandLine": false,
         "DefaultValue": "0"
@@ -48,11 +47,24 @@
         "Keywords": "name new world",
         "Description": "How to name the new world",
         "FieldName": "WorldName",
+        "ParamFieldName": "worldname",
         "placeholder": "World",
         "suffix": "",
         "InputType": "text",
-        "IncludeInCommandLine": false,
+        "IncludeInCommandLine": true,
         "DefaultValue": "world"
+    },
+    {
+        "DisplayName": "Backup count",
+        "Category": "Terraria Generator settings",
+        "Keywords": "backup backups count world rollback",
+        "Description": "Sets the number of rolling world backups to keep",
+        "FieldName": "Backups",
+        "placeholder": "some integer",
+        "suffix": "Backups",
+        "InputType": "number",
+        "IncludeInCommandLine": false,
+        "DefaultValue": 2
     },
     {
         "DisplayName": "Mod Path",
@@ -79,18 +91,18 @@
         "DefaultValue": ""
     },
     {
-        "DisplayName": "Download Source",
-        "Category": "Terraria ModLoader settings",
+        "DisplayName": "Update Source",
+        "Category": "Terraria Modloader settings",
         "Keywords": "download source steam github tmodloader",
         "Description": "Select where to obtain tModLoader. Steam requires you to own Terraria on your account.",
         "FieldName": "Source",
         "IncludeInCommandLine": false,
         "InputType": "enum",
         "EnumValues": {
-            "Steam": "Steam",
-            "GitHub": "GitHub"
+            "GitHub": "GitHub",
+            "Steam": "Steam"
         },
-        "DefaultValue": "Steam"
+        "DefaultValue": "GitHub"
     },
     {
         "DisplayName": "World Path",
@@ -110,10 +122,11 @@
         "Keywords": "name world worldname load boot",
         "Description": "Which world to load on boot",
         "FieldName": "World",
+        "ParamFieldName": "world",
         "placeholder": "ModLoader/Worlds/world.wld",
         "suffix": "",
         "InputType": "text",
-        "IncludeInCommandLine": false,
+        "IncludeInCommandLine": true,
         "DefaultValue": "ModLoader/Worlds/world.wld"
     },
     {
@@ -139,6 +152,18 @@
         "InputType": "password",
         "IncludeInCommandLine": false,
         "DefaultValue": ""
+    },
+    {
+        "DisplayName": "Ban List",
+        "Category": "Terraria Server settings",
+        "Keywords": "ban banlist bans security",
+        "Description": "Where to store the ban list",
+        "FieldName": "BanList",
+        "placeholder": "somefilename.txt",
+        "suffix": "",
+        "InputType": "text",
+        "IncludeInCommandLine": false,
+        "DefaultValue": "banlist.txt"
     },
     {
         "DisplayName": "Motd",
@@ -205,7 +230,7 @@
         "DefaultValue": 60
     },
     {
-        "DisplayName": "Slower liquids",
+        "DisplayName": "Slower Liquids",
         "Category": "Terraria Server settings",
         "Keywords": "slow liquid liquids slower lag performance",
         "Description": "Reduces maximum liquids moving at the same time. If enabled may reduce lag but liquids may take longer to settle.",
@@ -222,7 +247,7 @@
         "DisplayName": "Cheat Protection",
         "Category": "Terraria Server settings",
         "Keywords": "security cheat cheats auto kick spam",
-        "Description": "Enable/Disable additional cheat protection",
+        "Description": "Enable/Disable additional cheat protection. This may cause unwanted automatic kicks",
         "FieldName": "Secure",
         "InputType": "checkbox",
         "IncludeInCommandLine": false,
@@ -239,12 +264,10 @@
         "Description": "Enable/Disable the text announcements Announcement Box makes when pulsed from wire.",
         "FieldName": "DisableAnnouncementBox",
         "InputType": "checkbox",
-        "IncludeInCommandLine": false,
-        "EnumValues": {
-            "False": "",
-            "True": "-disableannouncementbox"
-        },
-        "DefaultValue": ""
+        "IncludeInCommandLine": true,
+        "ParamFieldName": "disableannouncementbox",
+        "IsFlagArgument": true,
+        "DefaultValue": "-disableannouncementbox"
     },
     {
         "DisplayName": "Announcement Box Range",
@@ -255,218 +278,8 @@
         "placeholder": "-1",
         "suffix": "Pixels",
         "InputType": "number",
-        "IncludeInCommandLine": false,
+        "IncludeInCommandLine": true,
+        "ParamFieldName": "announcementboxrange",
         "DefaultValue": "-1"
-    },
-    {
-        "DisplayName": "Freeze time",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power freeze time stop clock",
-        "Description": "Journey mode (1.4+ difficulty) power permissions for every individual power. Host is only relevant when using steam integration",
-        "FieldName": "time_setfrozen",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Set to Dawn",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power dawn time clock",
-        "FieldName": "time_setdawn",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Set to Noon",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power noon time clock",
-        "FieldName": "time_setnoon",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Set to Dusk",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power dusk time clock",
-        "FieldName": "time_setdusk",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Set to Midnight",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power midnight time clock",
-        "FieldName": "time_setmidnight",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "God Mode",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power god godmode",
-        "FieldName": "godmode",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Set wind intensity",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power wind set strength",
-        "FieldName": "wind_setstrength",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Set rain intensity",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power rain set strength",
-        "FieldName": "rain_setstrength",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Change game speed",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power speed time speedup",
-        "FieldName": "time_setspeed",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Lock rain conditions",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power rain lock freeze",
-        "FieldName": "rain_setfrozen",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Lock Wind conditions",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power wind lock freeze",
-        "FieldName": "wind_setfrozen",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Placement Range",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power placement range reach tile",
-        "FieldName": "increaseplacementrange",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Difficulty changing",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power difficulty",
-        "FieldName": "setdifficulty",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Biome/Evil Spreading",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power evil spread biome crimson hallow corrupted",
-        "FieldName": "biomespread_setfrozen",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
-    },
-    {
-        "DisplayName": "Spawn Rate",
-        "Category": "Terraria Journey Permissions",
-        "Keywords": "journey mode permissions power spawn rate",
-        "FieldName": "setspawnrate",
-        "InputType": "enum",
-        "EnumValues": {
-            "0": "Locked for everyone",
-            "1": "Can only be changed by host",
-            "2": "Can be changed by everyone"
-        },
-        "IncludeInCommandLine": false,
-        "DefaultValue": "2"
     }
 ]
