--- a/Terraria/tModLoader1.4config.json
+++ b/Terraria/tModLoader1.4config.json
@@ -104,6 +104,18 @@
         "DefaultValue": ""
     },
     {
+        "DisplayName": "World Path",
+        "Category": "Terraria Server settings",
+        "Keywords": "folder path world saves savegame worlds",
+        "Description": "The relative path to save worlds in",
+        "FieldName": "WorldPath",
+        "placeholder": "ModLoader/Worlds",
+        "suffix": "",
+        "InputType": "text",
+        "IncludeInCommandLine": false,
+        "DefaultValue": "ModLoader/Worlds"
+    },
+    {
         "DisplayName": "World Name",
         "Category": "Terraria Server settings",
         "Keywords": "name world worldname load boot",
@@ -113,7 +125,7 @@
         "placeholder": "ModLoader/Worlds/world.wld",
         "suffix": "",
         "InputType": "text",
-        "IncludeInCommandLine": true,
+        "IncludeInCommandLine": false,
         "DefaultValue": "ModLoader/Worlds/world.wld"
     },
     {
