Remove path prefix from tmod make seed a formattedarg re-add tmodloader world path (why was it even gone?)

--- a/Terraria/Terrariaconfig.json
+++ b/Terraria/Terrariaconfig.json
@@ -5,10 +5,11 @@
         "Keywords": "seed new world",
         "Description": "Which world seed to use when generating a new world",
         "FieldName": "Seed",
+        "ParamFieldName": "seed",
         "placeholder": "PoweredByAMP",
         "suffix": "",
         "InputType": "text",
-        "IncludeInCommandLine": false,
+        "IncludeInCommandLine": true,
         "DefaultValue": ""
     },
     {
