--- a/Terraria/Terrariaconfig.json
+++ b/Terraria/Terrariaconfig.json
@@ -48,7 +48,7 @@
         "DisplayName": "Created World Name",
         "Category": "Terraria Generator settings",
         "Keywords": "name new world",
-        "Description": "How to name the new world",
+        "Description": "How to name the new world if one is generated. Make sure the World name under Terraria Server Settings matches this name if you want to load it in subsequent starts.",
         "FieldName": "WorldName",
         "ParamFieldName": "worldname",
         "placeholder": "World",
