--- a/Terraria/tModLoader1.4config.json
+++ b/Terraria/tModLoader1.4config.json
@@ -34,6 +34,7 @@
         "Keywords": "difficulty new world journey expert master",
         "Description": "The difficulty of a newly generated world",
         "FieldName": "Difficulty",
+        "ParamFieldName": "difficulty",
         "InputType": "enum",
         "EnumValues": {
             "0": "Classic",
@@ -63,6 +64,7 @@
         "Keywords": "backup backups count world rollback",
         "Description": "Sets the number of rolling world backups to keep",
         "FieldName": "Backups",
+        "ParamFieldName": "worldrollbackstokeep",
         "placeholder": "some integer",
         "suffix": "Backups",
         "InputType": "number",
@@ -75,6 +77,7 @@
         "Keywords": "folder path mod mods tmodloader",
         "Description": "Where tModLoader will read mods from. [instructions](https://github.com/jasperfirecai2/amp-templates/wiki/Managing-mods-with-tmodloader)",
         "FieldName": "ModPath",
+        "ParamFieldName": "modpath",
         "placeholder": "ModLoader/Mods",
         "suffix": "",
         "InputType": "text",
@@ -87,6 +90,7 @@
         "Keywords": "pack mod mods modpack tmodloader",
         "Description": "Which modpack to load (does not install mods for you!)",
         "FieldName": "ModPack",
+        "ParamFieldName": "modpack",
         "placeholder": "modpack",
         "suffix": ".json",
         "InputType": "text",
@@ -99,6 +103,7 @@
         "Keywords": "folder path world saves savegame worlds",
         "Description": "The relative path to save worlds in",
         "FieldName": "WorldPath",
+        "ParamFieldName": "worldpath",
         "placeholder": "ModLoader/Worlds",
         "suffix": "",
         "InputType": "text",
@@ -124,6 +129,7 @@
         "Keywords": "players max maximum",
         "Description": "The maximum players in the server",
         "FieldName": "$MaxUsers",
+        "ParamFieldName": "maxplayers",
         "placeholder": "8",
         "suffix": "Users",
         "InputType": "number",
@@ -136,6 +142,7 @@
         "Keywords": "password pw security",
         "Description": "The password players must enter to join",
         "FieldName": "Password",
+        "ParamFieldName": "password",
         "placeholder": "Password123",
         "suffix": "",
         "InputType": "password",
@@ -148,6 +155,7 @@
         "Keywords": "ban banlist bans security",
         "Description": "Where to store the ban list",
         "FieldName": "BanList",
+        "ParamFieldName": "banlist",
         "placeholder": "somefilename.txt",
         "suffix": "",
         "InputType": "text",
@@ -160,6 +168,7 @@
         "Keywords": "motd motto message welcome",
         "Description": "The motto/message of the day",
         "FieldName": "Motd",
+        "ParamFieldName": "motd",
         "placeholder": "Welcome!",
         "suffix": "",
         "InputType": "text",
@@ -172,6 +181,7 @@
         "Keywords": "language lang",
         "Description": "The language of your server",
         "FieldName": "Language",
+        "ParamFieldName": "language",
         "InputType": "enum",
         "EnumValues": {
             "en-US": "English",
@@ -194,6 +204,7 @@
         "Keywords": "priority process prio performance",
         "Description": "The process priority",
         "FieldName": "Priority",
+        "ParamFieldName": "priority",
         "InputType": "enum",
         "EnumValues": {
             "0": "Realtime",
@@ -211,7 +222,8 @@
         "Category": "Terraria Server settings",
         "Keywords": "npc stream skipping lag bandwidth performance",
         "Description": "Reduces enemy skipping but increases bandwidth usage. The lower the number the less skipping will happen, but more data is sent. 0 is off.",
-        "FieldName": "NpcStream",
+        "FieldName": "NPCStream",
+        "ParamFieldName": "npcstream",
         "placeholder": "60",
         "suffix": "",
         "InputType": "number",
@@ -224,6 +236,7 @@
         "Keywords": "slow liquid liquids slower lag performance",
         "Description": "Reduces maximum liquids moving at the same time. If enabled may reduce lag but liquids may take longer to settle.",
         "FieldName": "Slowliquids",
+        "ParamFieldName": "slowliquids",
         "InputType": "checkbox",
         "IncludeInCommandLine": false,
         "EnumValues": {
@@ -238,6 +251,7 @@
         "Keywords": "security cheat cheats auto kick spam",
         "Description": "Enable/Disable additional cheat protection. This may cause unwanted automatic kicks",
         "FieldName": "Secure",
+        "ParamFieldName": "secure",
         "InputType": "checkbox",
         "IncludeInCommandLine": false,
         "EnumValues": {
@@ -277,6 +291,7 @@
         "Keywords": "journey mode permissions power freeze time stop clock",
         "Description": "Journey mode power permissions for every individual power. 'Host' is only relevant when using steam integration, which is not supported by AMP by default.",
         "FieldName": "time_setfrozen",
+        "ParamFieldName": "journeypermission_time_setfrozen",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -291,6 +306,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power dawn time clock",
         "FieldName": "time_setdawn",
+        "ParamFieldName": "journeypermission_time_setdawn",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -305,6 +321,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power noon time clock",
         "FieldName": "time_setnoon",
+        "ParamFieldName": "journeypermission_time_setnoon",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -319,6 +336,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power dusk time clock",
         "FieldName": "time_setdusk",
+        "ParamFieldName": "journeypermission_time_setdusk",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -333,6 +351,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power midnight time clock",
         "FieldName": "time_setmidnight",
+        "ParamFieldName": "journeypermission_time_setmidnight",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -347,6 +366,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power god godmode",
         "FieldName": "godmode",
+        "ParamFieldName": "journeypermission_godmode",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -361,6 +381,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power wind set strength",
         "FieldName": "wind_setstrength",
+        "ParamFieldName": "journeypermission_wind_setstrength",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -375,6 +396,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power rain set strength",
         "FieldName": "rain_setstrength",
+        "ParamFieldName": "journeypermission_rain_setstrength",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -389,6 +411,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power speed time speedup",
         "FieldName": "time_setspeed",
+        "ParamFieldName": "journeypermission_time_setspeed",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -403,6 +426,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power rain lock freeze",
         "FieldName": "rain_setfrozen",
+        "ParamFieldName": "journeypermission_rain_setfrozen",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -417,6 +441,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power wind lock freeze",
         "FieldName": "wind_setfrozen",
+        "ParamFieldName": "journeypermission_wind_setfrozen",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -431,6 +456,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power placement range reach tile",
         "FieldName": "increaseplacementrange",
+        "ParamFieldName": "journeypermission_increaseplacementrange",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -445,6 +471,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power difficulty",
         "FieldName": "setdifficulty",
+        "ParamFieldName": "journeypermission_setdifficulty",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -459,6 +486,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power evil spread biome crimson hallow corrupted",
         "FieldName": "biomespread_setfrozen",
+        "ParamFieldName": "journeypermission_biomespread_setfrozen",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
@@ -473,6 +501,7 @@
         "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power spawn rate",
         "FieldName": "setspawnrate",
+        "ParamFieldName": "journeypermission_setspawnrate",
         "InputType": "enum",
         "EnumValues": {
             "0": "Locked for everyone",
