Main branch to become standalone templates to help clear up confusion.

--- a/Terraria/tModLoader1.4metaconfig.json
+++ b/Terraria/tModLoader1.4metaconfig.json
@@ -1,6 +1,6 @@
 [
 	{
-		"ConfigFile": "Terrariaserverconfig.txt",
+		"ConfigFile": "tModLoader1.4serverconfig.txt",
 		"AutoMap": true,
 		"ConfigType": "kvp",
 		"ConfigFormat": "{0}={1}"
